<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--品牌形象-->
    <string name="app_name">墨痕书法</string>
    <string name="app_title">墨痕</string>
    <string name="user_name_default">无名客</string>
    <string name="user_signature_default">我家洗砚池头树\n朵朵花开淡墨痕</string>
    <string name="welcome">初入江湖</string>

    <!--服务器-->
    <string name="server_url">http://47.93.189.31:8080</string>
    <string name="han_zi_url">/han_zi</string>
    <string name="han_zi_log_url">/han_zi_log</string>
    <string name="practice_url">/practice</string>
    <string name="practice_log_url">/practice_log</string>

    <!--数据库-->
    <string name="database_name">database.db</string>
    <string name="han_zi_table">han_zi</string>
    <string name="practice_table">practice</string>
    <string name="han_zi_log_table">han_zi_log</string>
    <string name="practice_log_table">practice_log</string>

    <!--数据包-->
    <string name="han_zi_bundle">han_zi</string>
    <string name="han_zi_list_bundle">han_zi_list</string>
    <string name="practice_bundle">practice</string>
    <string name="update_bundle">update</string>
    <string name="page_num_bundle">page_num</string>
    <string name="position_bundle">position</string>

    <!--目录-->
    <string name="han_zi_dir">/han_zi</string>
    <string name="practice_cover_dir">/practice_cover</string>
    <string name="han_zi_log_dir">/han_zi_log</string>
    <string name="practice_log_cover_dir">/practice_log_cover</string>

    <!--偏好-->
    <string name="preference_name">preference</string>
    <string name="is_first_launch">is_first_launch</string>

    <!--库-->
    <string name="opencv_lib_name">opencv_java3</string>

    <!--动词-->
    <string name="start">拍摄</string>
    <string name="finish">完成</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="reshot">重拍</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="create">创建练习</string>
    <string name="rename">重命名</string>
    <string name="clear_cache">清空缓存</string>
    <string name="reset_database">重置数据</string>
    <string name="download_resource">下载资源</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="oneshot">单拍一个</string>

    <!--名词-->
    <string name="settings">设置</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="standard_img">标准</string>
    <string name="written_img">书写</string>
    <string name="feedback_img">反馈</string>
    <string name="overlap_img">重影</string>

    <!--状态提示-->
    <string name="downloading">资源下载中，请稍候</string>
    <string name="download_finished">下载已完成</string>
    <string name="camera_saving">保存中，请稍候</string>
    <string name="camera_error">拍摄失败，请重试</string>
    <string name="processing">处理中，请稍候</string>
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_error">删除失败</string>
    <string name="create_success">创建成功</string>
    <string name="create_error">创建失败</string>
    <string name="rename_success">重命名成功</string>
    <string name="rename_error">重命名失败</string>
    <string name="add_success">添加成功</string>
    <string name="add_error">添加失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="cache_cleared">缓存已清空</string>
    <string name="data_reset">数据已重置</string>
    <string name="developing">开发中，敬请期待</string>

    <!--操作提示-->
    <string name="input_name_hint">请输入名称</string>
    <string name="select_practice_hint">请选择添加到的练习</string>
    <string name="input_account_hint">请输入您的账号</string>
    <string name="input_password_hint">请输入您的密码</string>
    <string name="give_camera_permission_hint">请开启相机权限</string>

    <!--操作警告-->
    <string name="delete_practice_warning">此练习将被删除</string>
    <string name="delete_record_warning">此记录将被删除</string>
    <string name="clear_cache_warning">所有未保存的图片将被清空</string>
    <string name="reset_database_warning">所有练习记录将被清空\n所有练习将恢复初始状态</string>
    <string name="download_resource_warning">所有图片将重新下载\n所有数据将被重置</string>

    <!--筛选条件-->
    <string-array name="filter_style">
        <item>书体</item>
        <item>篆</item>
        <item>隶</item>
        <item>楷</item>
        <item>行</item>
    </string-array>
    <string-array name="filter_era">
        <item>年代</item>
        <item>秦</item>
        <item>东汉</item>
        <item>东晋</item>
        <item>北魏</item>
        <item>唐</item>
    </string-array>
    <string-array name="filter_artist">
        <item>书法家</item>
        <item>李斯</item>
        <item>王羲之</item>
        <item>欧阳询</item>
    </string-array>
    <string-array name="filter_work">
        <item>碑帖</item>
        <item>峄山碑</item>
        <item>曹全碑</item>
        <item>九成宫醴泉铭</item>
        <item>张猛龙碑</item>
        <item>集字圣教序</item>
    </string-array>
</resources>