<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="?attr/colorBar">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/top_bar_button"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/double_spacing"
            android:layout_marginTop="@dimen/double_spacing"
            android:layout_marginRight="@dimen/double_spacing"
            android:background="@drawable/shape_card"
            android:text="@string/clear_cache"
            android:textSize="@dimen/title_size" />

        <Button
            android:id="@+id/button_reset_data"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/double_spacing"
            android:layout_marginTop="@dimen/double_spacing"
            android:layout_marginRight="@dimen/double_spacing"
            android:background="@drawable/shape_card"
            android:text="@string/reset_database"
            android:textSize="@dimen/title_size" />

        <Button
            android:id="@+id/button_download_resource"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/double_spacing"
            android:layout_marginTop="@dimen/double_spacing"
            android:layout_marginRight="@dimen/double_spacing"
            android:background="@drawable/shape_card"
            android:text="@string/download_resource"
            android:textSize="@dimen/title_size" />

    </LinearLayout>

</RelativeLayout>