<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageview_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="@dimen/top_bar_button"
        android:layout_height="@dimen/top_bar"
        android:layout_alignParentStart="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back" />

    <RadioGroup
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/double_spacing"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_standard_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_weight="1"
            android:background="@drawable/selector_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/standard_img"
            android:textColor="@drawable/selector_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/button_written_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_weight="1"
            android:background="@drawable/selector_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/written_img"
            android:textColor="@drawable/selector_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/button_feedback_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_weight="1"
            android:background="@drawable/selector_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/feedback_img"
            android:textColor="@drawable/selector_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/button_overlap_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_weight="1"
            android:background="@drawable/selector_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/overlap_img"
            android:textColor="@drawable/selector_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

    </RadioGroup>

</RelativeLayout>